tests/fixtures/invalid/whitespace_only_edge_label.mmd
flowchart TD
    Start --> A{x > 0?}
    A -->|   | B[println x]
    A -->|No| End
    B --> End
